--- a/yaca-server/package.json
+++ b/yaca-server/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Oran Simhony <oran.simhony@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@pusher/chatkit-server": "^1.1.0",
     "dotenv": "^8.0.0",
